--- a/source/stylesheets/_colors.scss
+++ b/source/stylesheets/_colors.scss
@@ -14,3 +14,15 @@ $darkBaseColor: $darkgray;
 $inverseColor: $white;
 $highlightColor: $red;
 $baseColor: $black;
+
+.story-color {
+  background: $yellow;
+}
+
+.publications-color {
+  background: $blue;
+}
+
+.projects-color {
+  background: $red;
+}
