--- a/source/stylesheets/_mediaqueries.scss
+++ b/source/stylesheets/_mediaqueries.scss
@@ -4,32 +4,32 @@ $breakpoint-md : 800px;
 $breakpoint-lg : 1000px;
 $breakpoint-xl : 1200px;
 
-@media (min-width: $breakpoint-xs){
-  html {
-    font-size: 12px;
-  }
-}
+// @media (min-width: $breakpoint-xs){
+//   html {
+//     font-size: 12px;
+//   }
+// }
 
-@media (min-width: $breakpoint-sm){
-  html {
-    font-size: 18px;
-  }
-}
+// @media (min-width: $breakpoint-sm){
+//   html {
+//     font-size: 18px;
+//   }
+// }
 
-@media (min-width: $breakpoint-md){
-  html {
-    font-size: 20px;
-  }
-}
+// @media (min-width: $breakpoint-md){
+//   html {
+//     font-size: 20px;
+//   }
+// }
 
-@media (min-width: $breakpoint-lg){
-  html {
-    font-size: 22px;
-  }
-}
+// @media (min-width: $breakpoint-lg){
+//   html {
+//     font-size: 22px;
+//   }
+// }
 
-@media (min-width: $breakpoint-xl){
-  html {
-    font-size: 24px;
-  }
-}
+// @media (min-width: $breakpoint-xl){
+//   html {
+//     font-size: 24px;
+//   }
+// }
