--- a/source/stylesheets/modules/_buttons.scss
+++ b/source/stylesheets/modules/_buttons.scss
@@ -1,9 +1,8 @@
 .btn {
-    display: flex;
+    display: inline-flex;
     font-family: $buttonFont;
     font-size: rem-calc(16);
     height: $baseUnit * 1.5;
-    width: 50%;
     background: $inverseColor;
     padding: rem-calc(10) rem-calc(20);
     text-decoration: none;
@@ -37,10 +36,6 @@
 .btn-nav {
     margin-bottom: $baseUnit / 3;
     margin-top: 0;
-}
-
-.btn-full {
-    width: 100%;
 }
 
 .btn.btn-inverse {
