--- a/source/stylesheets/_colors.scss
+++ b/source/stylesheets/_colors.scss
@@ -15,14 +15,14 @@ $inverseColor: $white;
 $highlightColor: $red;
 $baseColor: $black;
 
-.story-color {
+.brand-primary {
   background: $yellow;
 }
 
-.publications-color {
+.brand-secundairy {
   background: $blue;
 }
 
-.projects-color {
+.brand-tertairy {
   background: $red;
 }
