--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,20 +3,25 @@ title: Coding the Humanities
 layout: main
 type: story
 ---
-<div id="item-header" class="item item-header story-color">
-  <div class="text-column">
-    <h1 class="textbar textbar-big">Coding_</h1><br>
-    <h1 class="textbar textbar-big">the_</h1><br>
-    <h1 class="textbar textbar-big">Humanities</h1><br>
-    <div><%= blog('blocks').articles[0].body %></div>
+<div id="item-header" class="item brand-primary">
+  <%= partial("partials/navigation", :locals => { :which_is_link_active => 0 }) %>
+  <div class="grid-content">
+    <div>
+      <h1 class="textbar textbar--big">Coding_</h1><br>
+      <h1 class="textbar textbar--big">the_</h1><br>
+      <h1 class="textbar textbar--big">Humanities</h1><br>
+      <%= blog('blocks').articles[0].body %>
+    </div>
   </div>
-  <div class="attributes-column">
-    <img class="hammer-header" src="./images/logo-short.svg" alt="">
+  <div class="offgrid-content">
+    <div class="hammer">
+      <!-- <img class="hammer__image hammer__image--header" src="./images/hammer-short.svg" alt=""> -->
+    </div>
   </div>
 </div>
 
 <div id="item-video" class="item item-video">
-  <div class="block block-video">
+  <div class="block block__video">
     <img class="playbutton" src="./images/playbutton.svg" alt="">
   </div>
 </div>
@@ -81,6 +86,6 @@ type: story
     </div>
   </div>
   <div class="column-right">
-    <img class="hammer-about" src="./images/logo-short.svg" alt="">
+    <img class="hammer hammer--about" src="./images/logo-short.svg" alt="">
   </div> 
 </div>
