--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 *, *:before, *:after {
@@ -22,4 +22,10 @@ a {
 
 ul {
   list-style: none;
+}
+
+p, a {
+  // font-size: $gridUnit * 2 * 0.9375;
+  font-size: $gridUnit * 2;
+  line-height: $gridUnit * 3;
 }
