--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -2,9 +2,9 @@
 
       <div class="footer-description">
         <div class="footer-logo-container">
-          <h1 class="textbar textbar-inverse title">Coding_</h1><br>
-          <h1 class="textbar textbar-inverse title">the_</h1><br>
-          <h1 class="textbar textbar-inverse title">Humanities</h1>
+          <h1 class="textbar textbar--inverse">Coding_</h1><br>
+          <h1 class="textbar textbar--inverse">the_</h1><br>
+          <h1 class="textbar textbar--inverse">Humanities</h1>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ad dignissimos distinctio quae autem nemo nesciunt sapiente vitae explicabo necessitatibus dolores aspernatur harum labore, quidem, ullam. Fugiat accusamus atque dolores.</p>
         <h3>Contact: </h3>
@@ -13,9 +13,9 @@
 
       <div class="footer-nav">
         <div class="footer-nav-btn-container">
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="title textbar textbar-inverse footer-textbar-projects">Projects</a>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="title textbar textbar-inverse footer-textbar-publications">Publications</a>
-          <a href="<%= config.http_prefix + '#' %>" class="title textbar textbar-inverse footer-textbar-process">Process</a>
+          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer-textbar-projects">Projects</a>
+          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer-textbar-publications">Publications</a>
+          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse footer-textbar-process">Process</a>
         </div>
       </div>
 
