--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -2,9 +2,9 @@
   <%  
     $navigation_items = [
       'Top',
-      '<span class="hide-responsive">From Content to </span>Context',
-      '<span class="hide-responsive">To </span>Curation',
-      '<span class="hide-responsive"> To </span>Faciliation',
+      '<span class="hidden-sm">From Content to </span>Context',
+      '<span class="hidden-sm">To </span>Curation',
+      '<span class="hidden-sm"> To </span>Faciliation',
       'Partners',
       'About'
     ]
