--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -13,12 +13,16 @@ $gridUnit: rem-calc(10);
 @import 'base';
 @import 'mediaqueries';
 @import 'layout';
+@import 'helpers';
 
 @import 'modules/nav';
-@import 'modules/textbox';
 @import 'modules/textbar';
-@import 'modules/buttons';
 @import 'modules/hammer';
+@import 'modules/video';
+@import 'modules/full-width-image';
+@import 'modules/references-container';
+@import 'modules/reference';
+@import 'modules/footer';
 
 // @import 'components/story';
 // @import 'components/page';
