--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -6,7 +6,7 @@
           <h1 class="textbar textbar--inverse">the_</h1><br>
           <h1 class="textbar textbar--inverse">Humanities</h1>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ad dignissimos distinctio quae autem nemo nesciunt sapiente vitae explicabo necessitatibus dolores aspernatur harum labore, quidem, ullam. Fugiat accusamus atque dolores.</p>
+        <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
         <h3>Contact: </h3>
         <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
       </div>
