--- a/source/layouts/main.erb
+++ b/source/layouts/main.erb
@@ -1,5 +1,5 @@
 <%= partial "partials/head" %>
-<main class="main <%= current_page.data.type %>">
+<main class="layout__main <%= current_page.data.type %>">
   <%= yield %>
 </main>
 <%= partial "partials/footer" %>
