--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -9,12 +9,12 @@
       'About'
     ]
     $navigation_links = [
-      '',
-      'item-body-2',
-      'item-body-3',
-      'item-body-4',
-      'item-partners',
-      'item-about'
+      'anchor-header',
+      'anchor-body-2',
+      'anchor-body-3',
+      'anchor-body-4',
+      'anchor-partners',
+      'anchor-about'
     ]
   %>
   <% for item in 0..5 %>
