--- a/source/stylesheets/_colors.scss
+++ b/source/stylesheets/_colors.scss
@@ -19,10 +19,10 @@ $baseColor: $black;
   background: $yellow;
 }
 
-.brand-secundairy {
+.brand-secundary {
   background: $blue;
 }
 
-.brand-tertairy {
+.brand-tertiary {
   background: $red;
 }
