--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -22,6 +22,7 @@ $gridUnit: rem-calc(10);
 @import 'modules/full-width-image';
 @import 'modules/references-container';
 @import 'modules/reference';
+@import 'modules/partner';
 @import 'modules/footer';
 
 // @import 'components/story';
