--- a/source/stylesheets/modules/_reference.scss
+++ b/source/stylesheets/modules/_reference.scss
@@ -2,6 +2,10 @@
   padding: 0 0 $gridUnit * 2 0;
 }
 
+.reference--header {
+  
+}
+
 .reference__content {
   padding: $gridUnit * 1 $gridUnit * 2 $gridUnit * 1 $gridUnit * 3;
   background: $yellow;
