--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,9 +3,9 @@ title: Coding the Humanities
 layout: main
 type: story
 ---
-<div id="anchor-header" class="layout__item layout__item--header brand-primary">
+<div id="anchor-header" class="layout__item brand-primary">
   <%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
-  <div class="layout__grid-content">
+  <div class="layout__item-grid-content">
     <div>
       <h1 class="textbar textbar--big">Coding_</h1><br>
       <h1 class="textbar textbar--big">the_</h1><br>
@@ -13,7 +13,7 @@ type: story
       <%= blog('blocks').articles[0].body %>
     </div>
   </div>
-  <div class="layout__offgrid-content">
+  <div class="layout__item-offgrid-content">
     <div class="hammer">
       <!-- <img class="hammer__image hammer__image--header" src="./images/hammer-short.svg" alt=""> -->
     </div>
@@ -32,7 +32,7 @@ type: story
     <%= partial("partials/navigation", :locals => { :which_is_link_active => item }) %>
     <img class="full-width-image" src="./images/item-body-<%= item %>.svg" alt="">
   </div>
-  <div class="layout__grid-content">
+  <div class="layout__item-grid-content">
     <% blog('blocks').articles.each do |block| %>
     <% if block.data.item == item %>
     <div>
@@ -42,21 +42,19 @@ type: story
     <% end %>
     <% end %>
   </div>
-  <div class="layout__offgrid-content">
-    <div class="layout__references">
-      <h3 class="references-container__header">Projects:</h3>
-      <% blog('projects').articles.each do |post| %>
-      <% if post.data.item == item %>
-      <%= partial(:"partials/reference", :locals => { :reference => post })  %>
-      <% end %>
-      <% end %>
-      <h3 class="references-container__header">Publications:</h3>
-      <% blog('publications').articles.each do |post| %>
-      <% if post.data.item == item %>
-      <%= partial(:"partials/reference", :locals => { :reference => post })  %>
-      <% end %>
-      <% end %>
-    </div>
+  <div class="layout__item-offgrid-content">
+    <h3 class="reference reference--header">Projects:</h3>
+    <% blog('projects').articles.each do |post| %>
+    <% if post.data.item == item %>
+    <%= partial(:"partials/reference", :locals => { :reference => post })  %>
+    <% end %>
+    <% end %>
+    <h3 class="reference reference--header">Publications:</h3>
+    <% blog('publications').articles.each do |post| %>
+    <% if post.data.item == item %>
+    <%= partial(:"partials/reference", :locals => { :reference => post })  %>
+    <% end %>
+    <% end %>
   </div>
 </div>
 <% end %>
@@ -66,13 +64,13 @@ type: story
     <%= partial("partials/navigation", :locals => { :which_is_link_active => 5 }) %>
     <img class="full-width-image" src="images/item-partners.svg" alt="">
   </div>
-  <div class="layout__grid-content">
+  <div class="layout__item-grid-content">
     <div class="block">
       <h1 class="title textbar"><%= blog('blocks').articles[4].data.title %></h1>
       <div class="block-small-typography"><%= blog('blocks').articles[4].body %></div>
     </div>
   </div>
-  <div class="layout__partners">
+  <div class="layout__item-partners">
     <% for entity in blog('blocks').articles[4].data.partners %>
     <div class="partner">
       <a href="<%= entity.url || 'https://www.linkedin.com/vsearch/f?type=all&keywords=' + entity.name %>">
@@ -86,13 +84,13 @@ type: story
 
 <div id="anchor-about"class="layout__item brand-primary">
   <%= partial("partials/navigation", :locals => { :which_is_link_active => 6 }) %>   
-  <div class="layout__grid-content">
+  <div class="layout__item-grid-content">
     <div class="block">
       <h1 class="title textbar"><%= blog('blocks').articles[5].data.title %></h1>
       <div class="block-small-typography"><%= blog('blocks').articles[5].body %></div>
     </div>
   </div>
-  <div class="layout__offgrid-content">
+  <div class="layout__item-offgrid-content">
     <img class="hammer hammer--about" src="./images/logo-short.svg" alt="">
   </div> 
 </div>
