--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,7 +1,6 @@
     <footer class="footer">
-
-      <div class="footer-description">
-        <div class="footer-logo-container">
+      <div class="footer__description">
+        <div class="footer__logo-container">
           <h1 class="textbar textbar--inverse">Coding_</h1><br>
           <h1 class="textbar textbar--inverse">the_</h1><br>
           <h1 class="textbar textbar--inverse">Humanities</h1>
@@ -10,19 +9,16 @@
         <h3>Contact: </h3>
         <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
       </div>
-
-      <div class="footer-nav">
-        <div class="footer-nav-btn-container">
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer-textbar-projects">Projects</a>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer-textbar-publications">Publications</a>
-          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse footer-textbar-process">Process</a>
+      <div class="footer__nav">
+        <div class="footer__nav-btn-container">
+          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer__textbar-projects">Projects</a>
+          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer__textbar-publications">Publications</a>
+          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse footer__textbar-process">Process</a>
         </div>
       </div>
-
-      <div class="footer-uva-container">
-        <img class="footer-uva-logo" src="images/uva-logo.svg" alt="">
+      <div class="footer__uva-container">
+        <img class="footer__uva-logo" src="images/uva-logo.svg" alt="">
       </div>
-      
     </footer>
   </body>
 </html>
