--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -17,8 +17,8 @@ $gridUnit: rem-calc(10);
 
 @import 'modules/nav';
 @import 'modules/textbar';
+@import 'modules/textbox';
 @import 'modules/hammer';
-@import 'modules/video';
 @import 'modules/full-width-image';
 @import 'modules/reference';
 @import 'modules/partner';
