--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -19,7 +19,7 @@ ul {
   list-style: none;
 }
 
-p, a {
+p, a, li {
   // font-size: $gridUnit * 2 * 0.9375;
   font-family: $baseFont;
   font-size: $gridUnit * 2;
