--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -12,6 +12,7 @@
 .layout__item {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   flex-wrap: wrap;
   width: 100%;
   min-height: 100vh;
@@ -27,13 +28,14 @@
   flex-wrap: wrap;
   flex-shrink: 0;  
   width: 100%;
-  padding: $gridUnit * 9 $gridUnit * 3;
+  padding: $gridUnit * 6 $gridUnit * 3 $gridUnit * 6 $gridUnit * 3;
   @media (min-width: $breakpoint-md){
     width: $gridUnit * 86;
   }
 }
 
 .layout__item-offgrid-content {
+  align-self: flex-end;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
