--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -6,7 +6,7 @@
           <h1 class="textbar textbar-inverse title">the_</h1><br>
           <h1 class="textbar textbar-inverse title">Humanities</h1>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ad dignissimos distinctio quae autem nemo nesciunt sapiente vitae explicabo necessitatibus dolores aspernatur harum labore, quidem, ullam. Fugiat accusamus atque dolores.</p>
+        <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
         <h3>Contact: </h3>
         <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
       </div>
@@ -17,13 +17,6 @@
           <a href="<%= config.http_prefix + 'publications.html#' %>" class="title textbar textbar-inverse footer-textbar-publications">Publications</a>
           <a href="<%= config.http_prefix + '#' %>" class="title textbar textbar-inverse footer-textbar-process">Process</a>
         </div>
-        <ul class="footer-nav-list">
-          <li><a class="footer-process-link" href="<%= config.http_prefix + '#item-body-2' %>">From Content to Context</a></li>
-          <li><a class="footer-process-link" href="<%= config.http_prefix + '#item-body-3' %>">To Curation</a></li>
-          <li><a class="footer-process-link" href="<%= config.http_prefix + '#item-body-4' %>">To Faciliation</a></li>
-          <li><a class="footer-process-link" href="<%= config.http_prefix + '#item-partners' %>">Partners</a></li>
-          <li><a class="footer-process-link" href="<%= config.http_prefix + '#item-about' %>">About</a></li>
-        </ul>
       </div>
 
       <div class="footer-uva-container">
