--- a/source/stylesheets/modules/_textbar.scss
+++ b/source/stylesheets/modules/_textbar.scss
@@ -7,8 +7,10 @@
 
   color: $inverseColor;
   font-family: $buttonFont;
+  // <need balancing>
   font-size: rem-calc(22);
   line-height: rem-calc(30);
+  // </needs balancing>
 }
 
 .textbar--inverse {
@@ -26,8 +28,8 @@
 }
 
 .textbar--fullwidth {
-  width: 60%;
-  margin: $gridUnit * 9 0 0 0;
+  width: 100%;
+  margin: 0 0 $gridUnit * 3 0;
   padding: $gridUnit * 3;
   
   font-size: $gridUnit * 3;
