--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@ layout: main
 <div id="anchor-header" class="layout__item brand-primary">
   <%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
   <div class="layout__item-grid-content">
-    <div>
+    <div class="textbox">
       <h1 class="textbar textbar--big">Coding_</h1><br>
       <h1 class="textbar textbar--big">the_</h1><br>
       <h1 class="textbar textbar--big">Humanities</h1><br>
@@ -31,8 +31,8 @@ layout: main
   </div>
   <% blog('blocks').articles.each do |block| %>
   <% if block.data.item == item %>
-  <h1 class="textbar textbar--fullwidth"><%= block.title %></h1>
   <div class="layout__item-grid-content">
+    <h1 class="textbar textbar--fullwidth"><%= block.title %></h1>
     <div class="textbox"><%= block.body %></div>
   </div>
   <% end %>
@@ -59,8 +59,8 @@ layout: main
     <%= partial("partials/navigation", :locals => { :which_is_link_active => 5 }) %>
     <img class="full-width-image" src="images/item-partners.svg" alt="">
   </div>
-  <h1 class="textbar textbar--fullwidth"><%= blog('blocks').articles[4].data.title %></h1>
   <div class="layout__item-grid-content">
+    <h1 class="textbar textbar--fullwidth"><%= blog('blocks').articles[4].data.title %></h1>
     <div class="textbox"><%= blog('blocks').articles[4].body %></div>
   </div>
   <div class="layout__item-partners">
@@ -78,10 +78,12 @@ layout: main
 <div id="anchor-about"class="layout__item brand-primary">
   <%= partial("partials/navigation", :locals => { :which_is_link_active => 6 }) %>   
   <div class="layout__item-grid-content">
-    <h1 class="textbar "><%= blog('blocks').articles[5].data.title %></h1>
-    <div class="textbox"><%= blog('blocks').articles[5].body %></div>
+    <div class="textbox">
+      <h1 class="textbar "><%= blog('blocks').articles[5].data.title %></h1>
+      <%= blog('blocks').articles[5].body %>
+    </div>
   </div>
   <div class="layout__item-offgrid-content">
-    <img class="hammer hammer--about" src="./images/logo-short.svg" alt="">
+    <img class="hammer hammer--about" src="./images/hammer-short.svg" alt="">
   </div> 
 </div>
