--- a/source/stylesheets/modules/_hammer.scss
+++ b/source/stylesheets/modules/_hammer.scss
@@ -1,11 +1,17 @@
 .hammer {
-  position: relative;
   overflow: hidden;
 }
 
 .hammer__image--header {
-  transform: rotate(45deg);
+  position: relative;
+  left: 60%;
   width: 100%;
+  max-width: 50vw;
+
+  transform: rotate(45deg);
+  @media (min-width: $breakpoint-lg){
+    left: 40%;
+  }
 }
 
 .hammer--about {
